memperbaiki return dari register
