# be/internal/modules/auth/dto.go
@@ -1,8 +1,7 @@
 package auth
 
 type RegisterRequest struct {
-	FirstName       string `json:"first_name" validate:"required"`
-	LastName        string `json:"last_name" validate:"required"`
+	Name            string `json:"name" validate:"required"`
 	Email           string `json:"email" validate:"required,email"`
 	Password        string `json:"password" validate:"required,min=6"`
 	BusinessName    string `json:"business_name" validate:"required"`
